@@ -1,6 +1,8 @@
 0.2.7
 - assignmapper was setting is_primary=True, causing all sorts of mayhem
 by not raising an error when redundant mappers were set up, fixed
+- added allow_null_pks option to Mapper, allows rows where some
+primary key columns are null (i.e. when mapping to outer joins etc)
 
 0.2.6
 - big overhaul to schema to allow truly composite primary and foreign
